# Optimization_Assignment_2

./: CMakeLists.txt  LICENSE  README.md  main.cpp
headers/: InteriorPoint.hpp  Matrix.hpp  SimplexMethod.hpp  Vector.hpp
source/: InteriorPoint.cpp  Matrix.cpp  SimplexMethod.cpp  Vector.cpp
tests/: test1.txt  test1_ans.txt  test2.txt  test2_ans.txt  test3.txt  test3_ans.txt  test4.txt  test4_ans.txt  test5.txt  test5_ans.txt  test6.txt  test6_ans.txt
